progress towards SwiftArena which manages swift values and heap objects